refactor(payment-8): resolve null pointeur